# nautiros_dev

./: .gitignore  .gitmodules
dev_ws/: colcon_defaults.yaml
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/vrx_bringup/share/vrx_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/install/vrx_controller/share/vrx_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/install/vrx_navigation/share/vrx_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/install/vrx_perception/share/vrx_perception/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
dev_ws/log/: latest_build
dev_ws/src/vrx_autonomy/: CMakeLists.txt  package.xml
dev_ws/src/vrx_bringup/: CMakeLists.txt  package.xml
dev_ws/src/vrx_controller/: CMakeLists.txt
dev_ws/src/vrx_navigation/: CMakeLists.txt  package.xml
dev_ws/src/vrx_perception/: CMakeLists.txt
vrx_ws/install/: local_setup.sh  setup.sh
vrx_ws/install/share/vrx_gazebo/: package.sh
vrx_ws/install/share/vrx_gz/: local_setup.sh  package.sh
vrx_ws/install/share/vrx_ros/: local_setup.sh  package.dsv  package.sh
vrx_ws/install/share/wamv_description/: local_setup.sh  package.sh
vrx_ws/install/share/wamv_gazebo/: package.sh
vrx_ws/log/: latest_build
(+37 files in other folders)
