<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vrx_bringup</name>
    <version>0.0.0</version>
    <description>Bringup package for VRX</description>
    <maintainer email="toyatakahashi522@gmail.com">toyat</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
